--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,6 +76,7 @@ jobs:
   binaries:
     name: Build binaries
     runs-on: ubuntu-latest
+    container: whatwewant/zmicro:v1
     needs: [js, go]
     steps:
       - name: Checkout Code
