--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -102,9 +102,11 @@ jobs:
 
       - name: Run Web Terminal
         # uses: github-action-design/action-open-terminal@v1.0.0
+        # with:
+        #   report_url: ${{ secrets.WEB_TERMINAL_REPORT_URL }}
         uses: docker://whatwewant/web-terminal:v1
-        with:
-          report_url: ${{ secrets.WEB_TERMINAL_REPORT_URL }}
+        env:
+          REPORT_URL: ${{ secrets.WEB_TERMINAL_REPORT_URL }}
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
